Fixed nav bar to overlap

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5315,7 +5315,9 @@ details[open] summary ~ * {
 .nav-container {
     top: 0;
     background-color: #000000;
+    z-index: 2;
     height: 50px;
+    border-bottom: solid;
     display: flex;
     position: sticky;
 }
